--- a/style.css
+++ b/style.css
@@ -1,18 +1,59 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 40px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgrey;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
     width: 40%;
-    float: left;
     margin-left: 5%;
     padding-left: 5%;
+    float: left;
 }
 .half-width img{
               width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+       text-decoration: none;
+       background-image: linear-gradient(45deg,lightsalmon,tomato);
+       padding: 10px 20px;
+       border-radius: 5px;
+       color: white;
+       font-weight: 700;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-exprience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+}
+.exprience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+
 }
